--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </ul>
         </nav>
     </header>
-    
+    <h1>Amader First Github class</h1>
+    <h2>Amra aj k github push kora sikhbo</h2>
 </body>
 </html>
